[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI framework
eframe = "0.24"
egui = "0.24"

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
surge-ping = "0.8"
socket2 = "0.5"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling and logging
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Collections and utilities
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

[target.'cfg(unix)'.dependencies]
nix = "0.27"